Fixed collapse animations on Side navbar

--- a/app/src/components/sidebar/sidebar.scss
+++ b/app/src/components/sidebar/sidebar.scss
@@ -1,14 +1,4 @@
 .tri-sidemenu {
-  ul {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-  }
-
-  a.md-button {
-    display: block;
-  }
-
   .md-button {
     border-radius: 0;
     color: inherit;
@@ -23,27 +13,29 @@
     text-decoration: none;
     white-space: normal;
     width: 100%;
-
   }
-  .active {
-    color: blue;
+  ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+  }
+  .menu-toggle-list.ng-hide {
+    max-height: 0;
   }
   .menu-toggle-list {
-    background: #fff;
     max-height: 999px;
     overflow: hidden;
     position: relative;
     z-index: 1;
-    -webkit-transition: 5.75s cubic-bezier(0.35, 0, 0.25, 1);
+    -webkit-transition: 0.75s cubic-bezier(0.35, 0, 0.25, 1);
     -webkit-transition-property: max-height;
-    -moz-transition: 5.75s cubic-bezier(0.35, 0, 0.25, 1);
+    -moz-transition: 0.75s cubic-bezier(0.35, 0, 0.25, 1);
     -moz-transition-property: max-height;
-    transition: 5.75s cubic-bezier(0.35, 0, 0.25, 1);
+    transition: 0.75s cubic-bezier(0.35, 0, 0.25, 1);
     transition-property: max-height;
   }
-
-  .menu-toggle-list.ng-hide {
-    max-height: 0;
+  tri-menulink, tri-dropdown {
+    display: block;
   }
 
   .menu-toggle-icon {
